Draft of website

--- a/index.html
+++ b/index.html
@@ -1,2 +1,35 @@
-<h1>holaaaa este es mi pagina</h1>
-<p>amo a mi novio</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Alexa Valentina</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo">Valen</div>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Portfolio</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+      <button id="#">😎</button>
+    </header>
+
+    <section id="hero">
+      <div class="hero-text">
+        <h1>Hi, I'm Alexa Valentina</h1>
+        <p>I'm a designer. I create beautiful ideas that people likes.</p>
+        <button>View Portfolio</button>
+      </div>
+    </section>
+
+    <footer>
+      <p>&copy; 2021 Alexa Valentina</p>
+    </footer>
+  </body>
+</html>
